fix content overflow

--- a/src/App.css
+++ b/src/App.css
@@ -34,14 +34,14 @@ header {
 main {
   display: flex;
   width: 100%;
-  height: 100%;
+  /* subtracting header height */
+  height: calc(100% - 5.5rem); 
 }
 
 .panel-container {
   display: flex;
   flex-direction: column;
   flex: 0 1 40%;
-  padding: 1rem 0;
   background-color: #fafafa;
 }
 
@@ -52,6 +52,16 @@ main {
 
 .panel-container:first-of-type {
   border-right: 1px solid #eee;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.panel-container:first-of-type > div:first-child {
+  margin-top: 0.5rem;
+}
+
+.panel-container:first-of-type > button:last-child {
+  margin-bottom: 1.5rem;
 }
 
 @media (max-width: 600px) {
